# distributed-pipeline

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  Dockerfile.test  MANIFEST.in  Pipfile  README.md  celery-flower.service  celery-worker.service  celery.md  celery.service  environment.yaml  pre_push_check.sh  prep-celery.sh  pyproject.toml  requirements.txt  setup.py  start_flower.sh  sync_with_astm.sh  test_science_phases.py  usage_guide.md
.github/workflows/: docs.yml  tests.yml
deploy/: celery-subband-worker@.service  manage-workers.sh
docs/: celery_deployment.md  conf.py  index.rst  installation.md  orca.flagging.rst  orca.metadata.rst  orca.rst  orca.transform.rst  orca.utils.rst  orca.wrapper.rst  quickstart.md  requirements.txt  subband-deployment.md  subband-pipeline.md  usage_guide.md  worker-management.md
notebooks/: celery-examples.ipynb  flower-performance.ipynb
orca/: __init__.py  autoscaler.py  celery.py  configmanager.py  default-orca-conf.yml  tasks.py
orca/calibration/: bandpass_pipeline.py  delay_pipeline.py
orca/extra/: __init__.py  catalogutils.py  classes.py  cleanupzeroes.py  sifting.py  siftingv2.py  source_find.medianfilter.py  source_find.py  tbs.py  temp_cal_new.py  tempcal.py
orca/flagging/: __init__.py  flag_bad_ants.py  flag_bad_bls.py  flag_bad_chans.20180206.py  (+4 more)
pipeline/: 5-hr-comp.py  cosmology_reduction.py  di_cal.py  dr1.py  dsa2000_mvp.py  dynspecs.py  fcoadds.py  flagging_averaging.py  flagging_averaging_all_nvme_auto_24h_LST_edges.py  flagging_averaging_nighttime.py  gainvariation.py  imagetest.py  imaging_celery.py  makeup.py  onedayaverage.py  produce_dynspec.py  produce_dynspec_updated.py  realtime.py  run_cal_products.py  stokesisnaps.py  subband_celery.py  tcoadds.py  transientpipeline.py  tutorial.py
tests/: test_configmanager.py
(+214 files in other folders)
