[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ovro-lwa-orca"
version = "0.0.1"
description = "description"
# python version set by casa stuf
requires-python = "~=3.8"
dependencies = [
"astropy",
"scipy",
"python-casacore",
"matplotlib",
"celery[redis]==5.3.1",
"pyyaml",
"flower",
"casatools==6.5.5.21",
"casatasks==6.5.5.21",
"gitpython",
"casadata",
]

[tool.setuptools]
packages = ["orca"]
