[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orca-pipeline"
version = "0.3.0"
description = "Tools for distributed OVRO-LWA data processing"
# python version set by casa stuff
requires-python = "~=3.8"
dependencies = [
"astropy",
"scipy",
"python-casacore",
"matplotlib",
"celery[redis]==5.3.1",
"pyyaml",
"flower",
"casatools==6.5.5.21",
"casatasks==6.5.5.21",
"gitpython",
"casadata",
"tqdm",
"reportlab",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mock",
]

[tool.setuptools]
#packages = ["orca"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
